--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -1,4 +1,4 @@
-name: Mapiah AppImage Release
+name: Mapiah AppImage Release (just for separate appimage debug)
 
 on:
   push:
@@ -42,11 +42,10 @@ jobs:
         flutter-version: 3.32.4
 
     - name: Install dependencies
-      run: |
-        set -e
-        set -x
-        sudo apt-get update
-        sudo apt-get install -y appstream appstream-util libappstream-glib8 clang cmake ninja-build fuse pkg-config libgtk-3-dev libglu1-mesa
+      uses: awalsh128/cache-apt-pkgs-action@latest
+      with:
+        packages: appstream appstream-util appstream-compose libappstream-glib8 clang cmake ninja-build pkg-config libgtk-3-dev libglu1-mesa
+        version: 1.0
 
     - name: Build flutter app
       run: |
@@ -63,6 +62,8 @@ jobs:
         set -x
         TAG="${{ github.event_name == 'push' && github.ref_name || github.event.inputs.test_tag }}"
         TAG_NUMBER="${TAG#v}"
+        echo "TAG=$TAG" >> $GITHUB_ENV
+        echo "TAG_NUMBER=$TAG_NUMBER" >> $GITHUB_ENV
         sed -i "/^AppDir:/,/^[^ ]/s/^\( *version: *\).*/\1$TAG_NUMBER/" AppImageBuilder.yml
 
     - name: Set up appimage
@@ -78,18 +79,6 @@ jobs:
         set -e
         set -x
         appimage-builder --recipe AppImageBuilder.yml --skip-test
-    #     flutter --version
-    # - name: Build AppImage using appimage-builder
-    #   uses: AppImageCrafters/build-appimage@master
-    #   with:
-    #     recipe: "./AppImageBuilder.yml"
-    #     args: "--skip-test"
-
-    - name: Save build Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: AppImage
-        path: './*.AppImage*'
 
     - name: Publish Release
       env:
@@ -98,8 +87,6 @@ jobs:
       run: |
         set -e
         set -x
-        TAG="${{ github.event_name == 'push' && github.ref_name || github.event.inputs.test_tag }}"
-        TAG_NUMBER="${TAG#v}"
         TITLE="Mapiah $TAG"
         ORIGINAL_APPIMAGE="Mapiah-$TAG_NUMBER-x86_64.AppImage"
         INSTALLER="Mapiah-$TAG_NUMBER-linux-x86_64.AppImage"
